--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,21 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script>
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker
+          .register("%PUBLIC_URL%/service-worker.js")
+          .then(registeration => {
+            console.log(
+              "serviceWorker has been registered for ",
+              registeration.scope
+            );
+          })
+          .catch(err => {
+            console.log("failed to register the serviceWorker ", err);
+          });
+      }
+    </script>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
